for jenkins post build action-Email

--- a/Presentation/Nop.Web/Views/Blog/BlogPost.cshtml
+++ b/Presentation/Nop.Web/Views/Blog/BlogPost.cshtml
@@ -1,5 +1,5 @@
 ﻿@model BlogPostModel
-@using Nop.Web.Models.Blogs;
+//@using Nop.Web.Models.Blogs;
 @{
     Layout = "~/Views/Shared/_ColumnsTwo.cshtml";
 
